Fixed a CSS bug only visible on Chromium

--- a/ItemPlayer.css
+++ b/ItemPlayer.css
@@ -117,6 +117,8 @@
 
 .itemplayer-clock {
 	position: absolute;
+	top: 0;
+	left: 10em;
 	font-size: 2em;
 	line-height: 1.5em;
 	text-align: center;
@@ -135,6 +137,7 @@
 	line-height: 1.5em;
 	font-size: 2em;
 	width: 9999px;
+	padding-left: .5em;
 }
 
 .itemplayer-scrubber {
